--- a/index.org
+++ b/index.org
@@ -72,11 +72,6 @@ bleeding edge]].
 #+ATTR_HTML: :width 300px :style float:right;
 [[file:img/org-mode-7-network-theory.jpg]]
 
-Buy the [[http://www.network-theory.co.uk/org/manual/][printed version]] of Org's manual ([[http://www.network-theory.co.uk/][Network Theory Ltd]].)
-
-For each book sold, [[http://www.network-theory.co.uk/][Network-Theory Ltd.]] is making a $1 donation to the
-maintainer of Org mode.
-
 Browse the [[https://orgmode.org/manual/index.html][manual]] (one page per section).
 
 Read the complete manual: [[https://orgmode.org/org.html][HTML]] or [[https://orgmode.org/org.pdf][PDF]]
@@ -96,6 +91,9 @@ You may also read [[http://www.catb.org/esr/faqs/smart-questions.html][How To As
 and Rick Moen.
 
 =M-x org-submit-bug-report RET=
+
+Network-Theory Ltd. has published a printed version of the Org manual
+but it is not available anymore.
 
 ** Move
    :PROPERTIES:
