Fix broken links to gmane.org

--- a/Changes_old.org
+++ b/Changes_old.org
@@ -4144,7 +4144,7 @@ explanations on why these changes were necessary.
 
     The new system has a technically cleaner implementation and more
     possibilities for capturing different types of data.  See
-    [[http://thread.gmane.org/gmane.emacs.orgmode/26441/focus%3D26441][Carsten's announcement]] for more details.
+    [[https://orgmode.org/list/C46F10DC-DE51-43D4-AFFE-F71E440D1E1F@gmail.com][Carsten's announcement]] for more details.
 
     To switch over to the new system:
 
@@ -4275,7 +4275,7 @@ explanations on why these changes were necessary.
 
 **** Modified link escaping
 
-     David Maus worked on `org-link-escape'.  See [[http://article.gmane.org/gmane.emacs.orgmode/37888][his message]]:
+     David Maus worked on `org-link-escape'.  See [[https://orgmode.org/list/87k4gysacq.wl%dmaus@ictsoc.de][his message]]:
 
      : Percent escaping is used in Org mode to escape certain characters
      : in links that would either break the parser (e.g. square brackets
@@ -5041,7 +5041,7 @@ Reported by Erik Hetzner and fixed by Carsten.
 Carsten wrote org-sudoku.el, a little sudoku solver, which lives
 in the contrib/ directory.
 
-From [[http://permalink.gmane.org/gmane.emacs.orgmode/45474][his message]]: "my daughter got stuck with a couple of SUDOKU
+From [[https://orgmode.org/list/3692D35F-2C42-43E5-AB4C-731A1887BA12@gmail.com][his message]]: "my daughter got stuck with a couple of SUDOKU
 puzzles during the vacation (where wh had no internet
 connection), so I hacked a small SUDOKU solver that reads a 9x9
 Org table and solves it as a sudoku puzzle.  A little silly, but
@@ -5899,7 +5899,7 @@ Thanks a lot to Nicolas for all this!
 
 *** Modified link escaping
 
-David Maus worked on `org-link-escape'.  See [[http://article.gmane.org/gmane.emacs.orgmode/37888][his message]]:
+David Maus worked on `org-link-escape'.  See [[https://orgmode.org/list/87k4gysacq.wl%dmaus@ictsoc.de][his message]]:
 
 : Percent escaping is used in Org mode to escape certain characters
 : in links that would either break the parser (e.g. square brackets
@@ -7024,7 +7024,7 @@ section [[https://orgmode.org/org-remember.pdf][chapter about remember]].
 
 The new system has a technically cleaner implementation and more
 possibilities for capturing different types of data.  See
-[[http://thread.gmane.org/gmane.emacs.orgmode/26441/focus%3D26441][Carsten's announcement]] for more details.
+[[https://orgmode.org/list/C46F10DC-DE51-43D4-AFFE-F71E440D1E1F@gmail.com][Carsten's announcement]] for more details.
 
 To switch over to the new system:
 
@@ -8114,7 +8114,7 @@ Sounds strange?  Try it, it is insanely fast when entering data.
 If you still don't like it, turn it off by customizing
 =org-cycle-level-after-item/entry-creation=.
 
-Thanks to [[http://thread.gmane.org/gmane.emacs.orgmode/18236][Samuel Wales]] and [[http://thread.gmane.org/gmane.emacs.orgmode/18447/focus%3D19015][John Wiegley]] for ideas that
+Thanks to [[https://orgmode.org/list/20524da70910071107s55fff3ecj4d92f2bc9511b970@mail.gmail.com][Samuel Wales]] and [[https://orgmode.org/list/F423AE52-4791-478E-AE96-5B80B088FF30@gmail.com][John Wiegley]] for ideas that
 contributed to this new feature.
 
 *** Speed commands at the start of a headline
