--- a/changes_older.org
+++ b/changes_older.org
@@ -364,7 +364,7 @@ This was a request by Rainer Stengele.
 The LaTeX =listings= package can now be used for formatting
 fontified source code in many programming languages.  For more
 information, see
-http://thread.gmane.org/gmane.emacs.orgmode/16269 and
+https://orgmode.org/list/m2prb6t9lw.fsf@gmail.com and
 https://orgmode.org/worg/org-faq.php#fontified_source_code_w_latex
 
 Thanks to Eric Schulte for this patch.
@@ -1331,7 +1331,7 @@ need to configure the feeds in the variable =org-feed-alist=.  The manual
 contains a short description, more detailed information is [[https://orgmode.org/worg/org-contrib/org-feed.php][available on
 Worg]].
 
-Full credit goes to Brad Bozarth who really [[http://thread.gmane.org/gmane.emacs.orgmode/12251][paved the way]] for this exciting
+Full credit goes to Brad Bozarth who really [[https://orgmode.org/list/f47cd1b50903220338g79cb0d32gcef1c4496b243aac@mail.gmail.com][paved the way]] for this exciting
 new feature.
 
 ** Export
@@ -1388,7 +1388,7 @@ the list, ignoring this item.  This is an experimental feature, it may
 disappear again if we find other ways to deal with literal examples right
 after lists.
 
-See [[http://thread.gmane.org/gmane.emacs.orgmode/12299/focus%3D12312][this mailing list thread]] for context.
+See [[https://orgmode.org/list/877i2g53px.fsf@fastmail.fm][this mailing list thread]] for context.
 
 ** Agenda
 
@@ -1420,7 +1420,7 @@ normal agenda sorting, the treatment of these entries depends on the
 variable =org-sort-agenda-noeffort-is-high=.  Now this variable is also
 respected during filtering.
 
-This new feature resulted from a [[http://thread.gmane.org/gmane.emacs.orgmode/12493][discussion]] with Matt Lundin and Bernt
+This new feature resulted from a [[https://orgmode.org/list/87tz5aq48u.fsf@fastmail.fm][discussion]] with Matt Lundin and Bernt
 Hansen.
 
 *** Introduce user-defined sorting operators
@@ -1637,7 +1637,7 @@ agenda view that will display the agenda, but hide all entries with tags
    ((org-agenda-filter-preset '("-FLUFF" "-BLUFF"))))
 #+end_src
 
-This is in response to a [[http://thread.gmane.org/gmane.emacs.orgmode/11752][thread on the mailing list]], started by Daniel
+This is in response to a [[https://orgmode.org/list/87ocwjzts2.fsf@CPU107.opentrends.net][thread on the mailing list]], started by Daniel
 Clemente and with great contributions by Bernt Hansen and Matt Lundin.
 
 *** Exporting of citations to LaTeX and HTML, using BibTeX
@@ -1982,7 +1982,7 @@ tasks that are blocked will not be visible in the agenda.  If the
 blocking is due to child TODO entries, this does make sense because the
 children themselves will show up in the TODO list.
 
-However, as John Rakestraw has [[http://thread.gmane.org/gmane.emacs.orgmode/10939][pointed out]], if the blocking is done by
+However, as John Rakestraw has [[https://orgmode.org/list/20090201154424.2c07d9ff@johnrakestraw.com][pointed out]], if the blocking is done by
 checkboxes, no trace of these subtasks is left.  Therefore, when the
 blocking is done by checkboxes, we now overrule the =invisible= setting
 and replace it with mere dimming of the task.
