--- a/fr/community.org
+++ b/fr/community.org
@@ -21,14 +21,18 @@ planifier des projets et de publier des documents, le tout en texte brut.</em></
 #+ATTR_HTML: :id main-image
 [[file:../img/list.png]]
 
-Inscrivez-vous à la [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][liste de discussion]] (en).
-
 La liste de discussion est /le/ lieu central pour tout ce qui est lié à
 Org : l'aide aux utilisateurs, les rapports de bogues, les suggestions
 de nouvelles fonctionnalités, etc.  N'hésitez pas !
 
+Inscrivez-vous à la [[https://lists.gnu.org/mailman/listinfo/emacs-orgmode][liste de discussion]] (en).
+
+Vous pouvez consulter les archives sur  [[http://lists.gnu.org/archive/html/emacs-orgmode/][lists.gnu.org]] ou [[https://orgmode.org/list/][orgmode.org/list]].
+
 Les utilisateurs discutent aussi sur le canal IRC =#org-mode= de
 [[http://webchat.freenode.net][freenode]].
+
+Vous pouvez aussi suivre les [[https://updates.orgmode.org][mises à jour importantes]].
 
 ** Move
    :PROPERTIES:
