--- a/index.org
+++ b/index.org
@@ -25,16 +25,18 @@ projects, and authoring documents with a fast and effective plain-text
     system.</em></p>
 
 </div>
-<div class="banner slim">
-  Support
-  via <a href="https://liberapay.com/bzg" title="Donations always help">
+<div class="banner slim green">
+  Support via&ensp;
+  <a href="https://liberapay.com/bzg" title="Donations always help"
+         style="color: #87711b">
     <img class="inline" src="/img/external/librepay.svg"/>
     LibrePay</a>,
   <a href="https://github.com/sponsors/bzg" title="Donations always help">
     <img class="inline" src="/img/external/github.svg"/>
     GitHub</a>,
   or
-  <a href="https://www.paypal.com/paypalme/bzg/10" title="Donations always help">
+  <a href="https://www.paypal.com/paypalme/bzg/10" title="Donations always help"
+     style="color: #222d65">
     <img class="inline" src="/img/external/paypal.svg"/>
     PayPal</a>.
 </div>
