Change main banner style - bigger and greener

--- a/index.org
+++ b/index.org
@@ -12,41 +12,45 @@
 
 #+begin_export html
 <div class="banner large">
-  <p id="a-quote"></p>
-  <h2>
+  <p id="a-quote" class="small"></p>
+  <div class="title">
     <img src="/img/org-mode-unicorn.svg"/>
-    Org-Mode
-  </h2>
-  <p style="margin-bottom: 0.3em">An innovative and intuitive plain text markup syntax.</p>
+    <h2>
+      Org-Mode
+      <p class="subtitle">An innovative and intuitive plain text markup syntax</p>
+    </h2>
+  </div>
   <p>Designed to be easily understood and manipulated by both humans and machines &mdash; it offers unparalleled versatility.</p>
   <br/>
-  <p style="font-size: 0.7em;"><em>Org mode is for keeping notes, maintaining TODO lists, planning
+  <p>Org mode is for keeping notes, maintaining To-Do Lists, planning
 projects, and authoring documents with a fast and effective plain-text
-    system.</em></p>
+    system.</p>
 
 </div>
-<div class="banner slim green">
-  Support via&ensp;
-  <a href="https://liberapay.com/bzg" title="Donations always help"
-         style="color: #87711b">
-    <img class="inline" src="/img/external/librepay.svg"/>
-    LibrePay</a>,
-  <a href="https://github.com/sponsors/bzg" title="Donations always help">
-    <img class="inline" src="/img/external/github.svg"/>
-    GitHub</a>,
-  or
-  <a href="https://www.paypal.com/paypalme/bzg/10" title="Donations always help"
-     style="color: #222d65">
-    <img class="inline" src="/img/external/paypal.svg"/>
-    PayPal</a>.
-</div>
-<div class="banner slim" style="background: none">
-  <p style="font-size: 1em;">Created by <a target="new"
+<div class="banner slim green inline">
+  <p>
+  Created by <a target="new"
   href="https://staff.science.uva.nl/~dominik/">Carsten Dominik</a> in 2003,
   maintained by <a target="new" href="http://bzg.fr">Bastien Guerry</a> and
   developed
   by <a href="https://orgmode.org/org.html#History-and-Acknowledgments">many
   others</a>.</p>
+  &ensp;
+  <p>
+  Support via&ensp;
+  <a href="https://liberapay.com/bzg" title="Donations always help"
+         style="color: #d9b217">
+    <img class="inline" src="/img/external/librepay.svg"/>
+    LibrePay</a>,
+  <a href="https://github.com/sponsors/bzg" title="Donations always help"
+     style="color: #222">
+    <img class="inline" src="/img/external/github.svg"/>
+    GitHub</a>,
+  or
+  <a href="https://www.paypal.com/paypalme/bzg/10" title="Donations always help"
+     style="color: #253b80">
+    <img class="inline" src="/img/external/paypal.svg"/>
+    PayPal</a></p>
 </div>
 #+end_export
 
